manifests/ingress.yml
  apiVersion: networking.k8s.io/v1
  kind: Ingress
  metadata:
    name: dream-demo-ingress
    namespace: app
  spec:
    ingressClassName: nginx
    rules:
      - host: www.example.com
        http:
          paths:
            - pathType: Prefix
              backend:
                service:
                  name: dream-demo-service
                  port:
                    number: 38080
              path: /
